--- a/WKWebView/Base.lproj/Main.storyboard
+++ b/WKWebView/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="16A201w" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="WKWebView" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,66 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2VC-zB-0Zb">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="560"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C2F-4W-3EO">
+                                <rect key="frame" x="507" y="562" width="73" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="73" id="5eV-cs-Ld6"/>
+                                    <constraint firstAttribute="height" constant="30" id="da4-D3-xvG"/>
+                                </constraints>
+                                <state key="normal" title="About.me"/>
+                                <connections>
+                                    <action selector="loadAboutMe:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XCR-8A-w00"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UuM-b6-UDz">
+                                <rect key="frame" x="20" y="562" width="40" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="XlS-bm-ozN"/>
+                                    <constraint firstAttribute="width" constant="40" id="iaw-ej-YjT"/>
+                                </constraints>
+                                <state key="normal" title="Apple"/>
+                                <connections>
+                                    <action selector="loadApple:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4O0-ox-gAc"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PX5-ly-Z0n">
+                                <rect key="frame" x="256" y="562" width="89" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="29" id="XoN-Rn-xJw"/>
+                                    <constraint firstAttribute="width" constant="89" id="gNl-ci-pai"/>
+                                </constraints>
+                                <state key="normal" title="My GitHub"/>
+                                <connections>
+                                    <action selector="loadGitHub:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NuW-MD-Mor"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="2VC-zB-0Zb" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="DY3-eT-JMG"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="2VC-zB-0Zb" secondAttribute="bottom" constant="40" id="GrR-u3-9CG"/>
+                            <constraint firstAttribute="trailing" secondItem="2VC-zB-0Zb" secondAttribute="trailing" id="Vgc-93-PwI"/>
+                            <constraint firstItem="C2F-4W-3EO" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="XJY-qV-eIa"/>
+                            <constraint firstItem="UuM-b6-UDz" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="XzS-S9-FdE"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="C2F-4W-3EO" secondAttribute="bottom" constant="8" id="Ze6-A1-SZW"/>
+                            <constraint firstItem="PX5-ly-Z0n" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="dwi-ZJ-Gr3"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="UuM-b6-UDz" secondAttribute="bottom" constant="8" id="eyx-XC-1jK"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="PX5-ly-Z0n" secondAttribute="bottom" constant="9" id="uaP-hN-hMA"/>
+                            <constraint firstItem="2VC-zB-0Zb" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="vQS-gA-bIi"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="container" destination="2VC-zB-0Zb" id="D5z-8f-36Q"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="323" y="321"/>
         </scene>
     </scenes>
 </document>
